Refactor around EK9 Any. Also added in StringOutput trait.